just added an icon and a simple nav

--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kisses' Portfolio</title>
+    <link rel="icon" href="./assets/images/klogo.png">
 </head>
 <body>
+    <section>
+        <nav>
+            <div>
+                <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Projects</li>
+                <li>Contact</li>
+                </ul>
+            </div>
+        </nav>
+    </section>
+
+
+
+
+
+
+
     
 </body>
 </html>
