started the navbar

--- a/index.html
+++ b/index.html
@@ -3,29 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
     <title>Kisses' Portfolio</title>
     <link rel="icon" href="./assets/images/klogo.png">
 </head>
 <body>
-    <section>
-        <nav>
-            <div>
-                <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Projects</li>
-                <li>Contact</li>
-                </ul>
-            </div>
-        </nav>
-    </section>
+    <!--NAVBAR -->
+    <nav>
+        <div class="left-nav">
+            <img src="" alt="logo">
+        </div>
+        <div class="right-nav">
+                <li><a>Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Projects</a></li>
+                <li><a>Contact</a></li>
+        </div>
+    </nav>
 
 
 
 
 
+    <!--MAIN-->
+    <main>
+        <!--HERO SECTION -->
+        <section></section>
 
+        <!--FEATURED PROJECTS SECTION-->
+        <section></section>
 
-    
+        <!-- ABOUT ME SECTION -->
+        <section></section>
+
+        <!--CONTACT ME SECTION-->
+        <section></section>
+    </main>
 </body>
 </html>
