added some contents

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
     <!--MAIN-->
     <main>
         <!--HERO SECTION -->
-        <section></section>
+        <section>
+            <p>👋Hello there! I am</p>
+            <h1> Jenella Kisses Bautista </h1>
+
+
+        </section>
 
         <!--FEATURED PROJECTS SECTION-->
         <section></section>
