modified a lil bit of css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--NAVBAR -->
     <nav>
         <div class="left-nav">
-            <img src="" alt="logo">
+            <img class="klogo" src="./assets/images/klogo.png" alt="logo">
         </div>
         <div class="right-nav">
                 <li><a>Home</a></li>
