--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a>About</a></li>
                 <li><a>Projects</a></li>
                 <li><a>Contact</a></li>
-                
+                <li><a>Socials</a></li>
         </div>
     </nav>
 
