--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <section>
             <p>👋Hello there! I am</p>
             <h1> Jenella Kisses Bautista </h1>
-
+            <div></div>
+            <div></div>
 
         </section>
 
