added some h2 contents

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 <li><a>About</a></li>
                 <li><a>Projects</a></li>
                 <li><a>Contact</a></li>
-                <li><a>Socials</a></li>
         </div>
     </nav>
 
@@ -35,19 +34,25 @@
         <section>
             <p>👋Hello there! I am</p>
             <h1> Jenella Kisses Bautista </h1>
-            <div></div>
-            <div></div>
+            <p> Just a Filipino dev on a mission to build cool stuff and make life easier one software at a time. 💻 </p>
+            <p> Resume </p>
 
         </section>
 
         <!--FEATURED PROJECTS SECTION-->
-        <section></section>
+        <section>
+            <h2>Featured Projects</h2>
+        </section>
 
         <!-- ABOUT ME SECTION -->
-        <section></section>
+        <section>
+            <h2>About Me</h2>
+        </section>
 
         <!--CONTACT ME SECTION-->
-        <section></section>
+        <section>
+            <h2>Let's work together</h2>
+        </section>
 
         <footer></footer>
     </main>
