added a footer content

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             <h2>Let's work together</h2>
         </section>
 
-        <footer></footer>
+        <footer>
+            <p>2021 © Jenella Kisses Bautista • All Rights Reserved.</p>
+        </footer>
     </main>
 </body>
 </html>
