added a grid element

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <!--FEATURED PROJECTS SECTION-->
         <section>
             <h2>Featured Projects</h2>
+            <div></div>
+            <div></div>
         </section>
 
         <!-- ABOUT ME SECTION -->
