added a hero section

--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
     <!--MAIN-->
     <main>
         <!--HERO SECTION -->
-        <section>
-            <p>👋Hello there! I am</p>
-            <h1> Jenella Kisses Bautista </h1>
-            <p> Just a Filipino dev on a mission to build cool stuff and make life easier one software at a time. 💻 </p>
-            <p> Resume </p>
-
+        <section class = hero-container>
+                <p>👋Hello there! I am</p>
+                <h1> Jenella Kisses Bautista </h1>
+                <p> Just a Filipino dev on a mission to build cool stuff and make life easier one software at a time. 💻 </p>
+                <p> Resume </p>
         </section>
 
         <!--FEATURED PROJECTS SECTION-->
