edited the placements

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <!--MAIN-->
     <main>
         <!--HERO SECTION -->
-        <section class = hero-container>
-                <p>👋 Hello there! I am</p>
-                <h1> Jenella Kisses Bautista </h1>
-                <p> Just a Filipino dev on a mission to build cool stuff and make life easier one software at a time. 💻 </p>
+        <section class ="hero-container">
+                <p class="greetings">👋 Hello there! I am</p>
+                <h1 class="name"> Jenella Kisses Bautista </h1>
+                <p class = "description"> Just a Filipino dev on a mission to build cool stuff and make <br> life easier one software at a time. 💻 </p>
                 <p> Resume </p>
         </section>
 
