--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p class="greetings">👋 Hello there! I am</p>
                 <h1 class="name"> Jenella Kisses Bautista </h1>
                 <p class = "description"> Just a Filipino dev on a mission to build cool stuff and make <br> life easier one software at a time. 💻 </p>
-                <p> Resume </p>
+                <button><p> Resume </p></button>
         </section>
 
         <!--FEATURED PROJECTS SECTION-->
