added the projects section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
 
         <!--FEATURED PROJECTS SECTION-->
-        <section>
+        <section class="projects-section">
             <h2>Featured Projects</h2>
             <div></div>
             <div></div>
