fixed the section title

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!--FEATURED PROJECTS SECTION-->
         <section class="projects-section">
-            <h2>Featured Projects</h2>
+            <h2 class="projects-title">Featured Projects</h2>
             <div></div>
             <div></div>
         </section>
