--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img class="klogo" src="./assets/images/klogo.png" alt="logo">
         </div>
         <div class="right-nav">
-                <li><a>Home</a></li>
-                <li><a>About</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a >About</a></li>
                 <li><a>Projects</a></li>
                 <li><a>Contact</a></li>
         </div>
