--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div class="right-nav">
                 <li><a href="#">Home</a></li>
-                <li><a >About</a></li>
-                <li><a>Projects</a></li>
-                <li><a>Contact</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
         </div>
     </nav>
 
